--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -8,12 +8,17 @@
     "editable": false
    },
    "source": [
-    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div>\n",
+    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div><br>\n",
     "\n",
     "> **YugabyteDB YSQL Development**\n",
     ">\n",
     "> Enroll for free  [Yugabyte University](https://university.yugabyte.com/).\n",
-    ">"
+    ">\n",
+    "\n",
+    "<br>\n",
+    "This notebook file is:\n",
+    "\n",
+    "`01_Lab_Setup.ipynb`"
    ]
   },
   {
@@ -39,18 +44,28 @@
     "## 🛠️ Requirements\n",
     "Here are the requirements for this lab:\n",
     "- ✅ Launch using this Gitpod workspace, which you are already doing\n",
+    "- ✅ A running, standalone MySQL database, which is already running\n",
     "- ✅ A running, 3 node YugabyteDB cluster, which is already running\n",
-    "- ☑️ A Python 3.8.13 or higher kernel for the notebook, *which you need to select right now!!!*\n",
+    "- ☑️ A Python 3.12 or higher kernel for the notebook, *which you need to select right now!!!*\n",
+    "- ☑️ Fix Pop-ups Blocked, *which you need to select right now!!!*\n",
+    "- ☑️ Connect to YugabyteDB with `ysqlsh`, YSQL shell, and create the database, *which you need to do next*\n",
     "\n",
     "### Select your notebook kernel\n",
     "- In the Notebook toolbar, click **Select Kernel**.\n",
     "<br>\n",
     "<img width=50% src=\"assets/01_01_Select_Kernel_Toolbar.png\" />\n",
     "\n",
-    "- Next, in the dropdown, select **Python 3.8.13** or higher.\n",
+    "- Next, in the dropdown, select **Python 3.12** or higher.\n",
     "<br>\n",
     "<img width=50% src=\"assets/01_02_Select_Kernel_Dropdown.png\" />\n",
     "\n",
+    "### Fix Pop-ups Blocked\n",
+    "- In your Chromium browser, select the Pop-ups Blocked icon in the browser address bar.\n",
+    "- In the dialog, select **Always allow**. This lets you view the YugabyteD web user interface on port `15433`.\n",
+    "  <br>\n",
+    "  <img width=50% src=\"assets/01_03_Popups_Blocked.png\" />\n",
+    "\n",
+    "<br>\n",
     "That's it!"
    ]
   },
@@ -122,7 +137,7 @@
     "editable": false
    },
    "source": [
-    "---\n",
+    "\n",
     "# 👣 Setup steps\n",
     "Here are the steps to setup this lab:\n",
     "- Create the notebook variables\n",
@@ -137,17 +152,19 @@
     "editable": false
    },
    "source": [
-    "### Create the notebook variables \n",
+    "### 👇 Create the notebook variables \n",
     "\n",
-    "> IMPORTANT!\n",
+    "> 👉 IMPORTANT! 👈\n",
     "> \n",
-    "> Do NOT skip running this cell.  The notebook variables, once assigned, persist. By desing, other notebooks will load these variables.\n",
+    "> Do **NOT** skip running this cell. \n",
     "> \n",
     "\n",
     "The following Python cell creates and stores variables that all the notebooks in this lab will use. You can view these variables in the Jupyter tab.\n",
     "\n",
     "- To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell.\n",
-    "- Verify the accuracy of the output values"
+    "- Verify the accuracy of the output values\n",
+    "\n",
+    "👇 👇 👇 "
    ]
   },
   {
@@ -187,14 +204,20 @@
     "\n",
     "# env_vars defines the following\n",
     "MY_DB_NAME=os.environ.get('MY_DB_NAME')\n",
+    "MY_DB_PORT=os.environ.get('MY_DB_PORT')\n",
+    "\n",
     "MY_HOST_IPv4_01=os.environ.get('MY_HOST_IPv4_01')\n",
     "MY_HOST_IPv4_02=os.environ.get('MY_HOST_IPv4_02')\n",
     "MY_HOST_IPv4_03=os.environ.get('MY_HOST_IPv4_03')\n",
-    "MY_TSERVER_WEBSERVER_PORT=os.environ.get('MY_TSERVER_WEBSERVER_PORT')\n",
     "\n",
-    "# Gitpod URLS\n",
-    "MY_YB_MASTER_HOST_GITPOD_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
+    "MY_MASTER_WEB_PORT=os.environ.get('MY_MASTER_WEB_PORT')\n",
+    "MY_TSERVER_WEBSERVER_PORT=os.environ.get('MY_TSERVER_WEBSERVER_PORT')\n",
+    "MY_YUGABYTED_WEB_UI_PORT=os.environ.get('MY_YUGABYTED_WEB_UI_PORT')\n",
+    "\n",
+    "MY_YB_MASTER_HOST_GITPOD_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://'+MY_MASTER_WEB_PORT+'-')\n",
     "MY_YB_TSERVER_HOST_GITPOD_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://'+MY_TSERVER_WEBSERVER_PORT+'-')\n",
+    "MY_YUGABYTED_UI_HOST_GITPOD_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://'+MY_YUGABYTED_WEB_UI_PORT+'-')\n",
+    "\n",
     "\n",
     "# Current directory of project and related child folders\n",
     "MY_NOTEBOOK_DIR=os.getcwd()\n",
@@ -222,19 +245,29 @@
     "\n",
     "# Store the note book values for other notebooks to use\n",
     "\n",
-    "%store MY_DB_NAME\n",
     "%store MY_YB_PATH\n",
     "%store MY_YB_PATH_DATA\n",
     "%store MY_GITPOD_WORKSPACE_URL\n",
+    "\n",
+    "%store MY_DB_NAME\n",
+    "%store MY_DB_PORT\n",
+    "\n",
     "%store MY_HOST_IPv4_01\n",
     "%store MY_HOST_IPv4_02\n",
     "%store MY_HOST_IPv4_03\n",
+    "\n",
+    "%store MY_MASTER_WEB_PORT\n",
     "%store MY_TSERVER_WEBSERVER_PORT\n",
+    "%store MY_YUGABYTED_WEB_UI_PORT\n",
+    "\n",
     "%store MY_YB_MASTER_HOST_GITPOD_URL\n",
     "%store MY_YB_TSERVER_HOST_GITPOD_URL\n",
+    "%store MY_YUGABYTED_UI_HOST_GITPOD_URL\n",
+    "\n",
     "%store MY_NOTEBOOK_DIR\n",
     "%store MY_NOTEBOOK_DATA_FOLDER\n",
     "%store MY_NOTEBOOK_UTILS_FOLDER\n",
+    "\n",
     "%store MY_DATA_DDL_FILE_0\n",
     "%store MY_DATA_DML_FILE_0\n",
     "%store MY_DATA_DDL_FILE_1\n",
@@ -243,7 +276,6 @@
     "%store MY_DATA_DML_FILE_2\n",
     "%store MY_DATA_DDL_FILE_3\n",
     "%store MY_DATA_DML_FILE_3\n",
-    "\n",
     "\n",
     "%store MY_JEOPARDY_DATA_FILE\n",
     "%store MY_GIN_EXAMPLES\n",
@@ -524,7 +556,7 @@
    },
    "source": [
     "#### Load SQL magic extension\n",
-    ">IMPORTANT!\n",
+    "> 👉 IMPORTANT! 👈\n",
     ">\n",
     "> To use SQL magic, you must run the following cell that loads the notebook extension."
    ]
