--- a/02_YSQL_Development.ipynb
+++ b/02_YSQL_Development.ipynb
@@ -5,13 +5,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div>\n",
+    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div><br>\n",
     "\n",
     "> **YugabyteDB YSQL Development**\n",
     ">\n",
     "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/).\n",
     ">\n",
     "\n",
+    "<br>\n",
+    "This notebook file is:\n",
+    "\n",
+    "`02_YSQL_Development.ipynb`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Language fundamentals\n",
     "This notebook showcases various Data Definition Language (DDL) and Data Manipulation Language (DML) statements for Yugabyte Structure Query Language (YSQL)."
    ]
@@ -38,7 +48,7 @@
     "<br>\n",
     "<img width=50% src=\"assets/01_01_Select_Kernel_Toolbar.png\" />\n",
     "\n",
-    "- Next, in the dropdown, select **Python 3.8.13** or higher.\n",
+    "- Next, in the dropdown, select **Python 3.12** or higher.\n",
     "<br>\n",
     "<img width=50% src=\"assets/01_02_Select_Kernel_Dropdown.png\" />\n",
     "\n",
@@ -59,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "\n",
     "## 👣 Setup steps\n",
     "Here are the steps to setup this lab:\n",
     "- Import the notebook variables\n",
@@ -73,14 +83,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import the notebook variables \n",
+    "### 👇 Import the notebook variables\n",
     "\n",
-    "> ‼️ Important\n",
+    "> 👉 IMPORTANT! 👈\n",
     "> \n",
     "> Do **NOT** skip running the following cell. \n",
     "> \n",
     "\n",
-    "The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell."
+    "The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell. \n",
+    "\n",
+    "👇 👇 👇 "
    ]
   },
   {
@@ -89,24 +101,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspiration from https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\n",
     "# Use %store -r to read 01_Lab_Setup variables\n",
-    "%store -r MY_DB_NAME\n",
+    "\n",
     "%store -r MY_YB_PATH\n",
+    "%store -r MY_YB_PATH_DATA\n",
+    "%store -r MY_GITPOD_WORKSPACE_URL\n",
+    "\n",
+    "%store -r MY_DB_NAME\n",
+    "%store -r MY_DB_PORT\n",
+    "\n",
     "%store -r MY_HOST_IPv4_01\n",
     "%store -r MY_HOST_IPv4_02\n",
     "%store -r MY_HOST_IPv4_03\n",
-    "%store -r MY_GITPOD_WORKSPACE_URL\n",
     "\n",
+    "%store -r MY_MASTER_WEB_PORT\n",
+    "%store -r MY_TSERVER_WEBSERVER_PORT\n",
+    "%store -r MY_YUGABYTED_WEB_UI_PORT\n",
+    "\n",
+    "%store -r MY_YB_MASTER_HOST_GITPOD_URL\n",
+    "%store -r MY_YB_TSERVER_HOST_GITPOD_URL\n",
+    "%store -r MY_YUGABYTED_UI_HOST_GITPOD_URL\n",
+    "\n",
+    "%store -r MY_NOTEBOOK_DIR\n",
     "%store -r MY_NOTEBOOK_DATA_FOLDER\n",
     "%store -r MY_NOTEBOOK_UTILS_FOLDER\n",
     "\n",
+    "%store -r MY_DATA_DDL_FILE_0\n",
+    "%store -r MY_DATA_DML_FILE_0\n",
     "%store -r MY_DATA_DDL_FILE_1\n",
     "%store -r MY_DATA_DML_FILE_1\n",
     "%store -r MY_DATA_DDL_FILE_2\n",
     "%store -r MY_DATA_DML_FILE_2\n",
     "%store -r MY_DATA_DDL_FILE_3\n",
-    "%store -r MY_DATA_DML_FILE_3"
+    "%store -r MY_DATA_DML_FILE_3\n",
+    "\n",
+    "%store -r MY_JEOPARDY_DATA_FILE\n",
+    "%store -r MY_GIN_EXAMPLES\n",
+    "%store -r MY_GITHUB_DATA_FILE\n",
+    "\n",
+    "%store -r MY_UTIL_FUNCTIONS_FILE\n",
+    "%store -r MY_UTIL_YBTSERVER_METRICS_FILE"
    ]
   },
   {
