--- a/04_Anatomy_of_an_Index.ipynb
+++ b/04_Anatomy_of_an_Index.ipynb
@@ -5,8 +5,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div>\n",
+    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div><br>\n",
     "\n",
+    "> **YugabyteDB YSQL Development**\n",
+    ">\n",
+    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/).\n",
+    ">\n",
+    "<br>\n",
+    "This notebook file is:\n",
+    "\n",
+    "`04_Anatomy_of_an_Index.ipynb`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Anatomy of an Index\n",
     "In the `03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb` notebook, you discovered how YugabyteDB stores data in tablets. You also learned that YugabyteDB and YSQL support two sharding strategies for tables: hash and range sharding.\n",
     "\n",
@@ -40,16 +54,17 @@
     "  -  Hints and other features\n",
     "\n",
     "\n",
+    "\n",
     "### Select your notebook kernel\n",
     "- In the Notebook toolbar, click **Select Kernel**.\n",
     "<br>\n",
     "<img width=50% src=\"assets/01_01_Select_Kernel_Toolbar.png\" />\n",
     "\n",
-    "- Next, in the dropdown, select **Python 3.8.13** or higher.\n",
+    "- Next, in the dropdown, select **Python 3.12** or higher.\n",
     "<br>\n",
     "<img width=50% src=\"assets/01_02_Select_Kernel_Dropdown.png\" />\n",
     "\n",
-    "That's it!\n"
+    "That's it!"
    ]
   },
   {
@@ -66,7 +81,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
     "## 👣 Setup steps\n",
     "Here are the steps to setup this lab:\n",
     "- Import the notebook variables\n",
@@ -80,14 +94,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import the notebook variables \n",
+    "### 👇 Import the notebook variables\n",
     "\n",
-    "> ‼️ Important\n",
+    "> 👉 IMPORTANT! 👈\n",
     "> \n",
     "> Do **NOT** skip running the following cell. \n",
     "> \n",
     "\n",
-    "The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell."
+    "The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell. \n",
+    "\n",
+    "👇 👇 👇 "
    ]
   },
   {
@@ -96,19 +112,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use %store -r to read 01_Lab_Requirements_Setup variables\n",
-    "%store -r MY_DB_NAME\n",
+    "# Use %store -r to read 01_Lab_Setup variables\n",
+    "\n",
     "%store -r MY_YB_PATH\n",
     "%store -r MY_YB_PATH_DATA\n",
     "%store -r MY_GITPOD_WORKSPACE_URL\n",
+    "\n",
+    "%store -r MY_DB_NAME\n",
+    "%store -r MY_DB_PORT\n",
+    "\n",
     "%store -r MY_HOST_IPv4_01\n",
     "%store -r MY_HOST_IPv4_02\n",
     "%store -r MY_HOST_IPv4_03\n",
-    "%store -r MY_NOTEBOOK_DIR\n",
+    "\n",
+    "%store -r MY_MASTER_WEB_PORT\n",
     "%store -r MY_TSERVER_WEBSERVER_PORT\n",
-    "%store -r MY_NOTEBOOK_DATA_FOLDER\n",
+    "%store -r MY_YUGABYTED_WEB_UI_PORT\n",
+    "\n",
     "%store -r MY_YB_MASTER_HOST_GITPOD_URL\n",
-    "%store -r MY_YB_TSERVER_HOST_GITPOD_URL"
+    "%store -r MY_YB_TSERVER_HOST_GITPOD_URL\n",
+    "%store -r MY_YUGABYTED_UI_HOST_GITPOD_URL\n",
+    "\n",
+    "%store -r MY_NOTEBOOK_DIR\n",
+    "%store -r MY_NOTEBOOK_DATA_FOLDER\n",
+    "%store -r MY_NOTEBOOK_UTILS_FOLDER\n",
+    "\n",
+    "%store -r MY_DATA_DDL_FILE_0\n",
+    "%store -r MY_DATA_DML_FILE_0\n",
+    "%store -r MY_DATA_DDL_FILE_1\n",
+    "%store -r MY_DATA_DML_FILE_1\n",
+    "%store -r MY_DATA_DDL_FILE_2\n",
+    "%store -r MY_DATA_DML_FILE_2\n",
+    "%store -r MY_DATA_DDL_FILE_3\n",
+    "%store -r MY_DATA_DML_FILE_3\n",
+    "\n",
+    "%store -r MY_JEOPARDY_DATA_FILE\n",
+    "%store -r MY_GIN_EXAMPLES\n",
+    "%store -r MY_GITHUB_DATA_FILE\n",
+    "\n",
+    "%store -r MY_UTIL_FUNCTIONS_FILE\n",
+    "%store -r MY_UTIL_YBTSERVER_METRICS_FILE"
    ]
   },
   {
