--- a/06_YSQL_Development_Advanced.ipynb
+++ b/06_YSQL_Development_Advanced.ipynb
@@ -5,12 +5,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div>\n",
+    "<div style=\"width:100%; background-color: #000041\"><a target=\"_blank\" href=\"http://university.yugabyte.com\"><img src=\"assets/YBU_Logo.png\" /></a></div><br>\n",
     "\n",
     "> **YugabyteDB YSQL Development**\n",
     ">\n",
     "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/).\n",
     ">\n",
+    "<br>\n",
+    "This notebook file is:\n",
+    "\n",
+    "`06_YSQL_Development_Advanced.ipynb`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Advanced language features\n",
     "In this notebook, you'll see how YSQL implements table partitioning and extends this using tablespaces so that developers can build geo-distributed applications that support row-level, geo-partitioning."
    ]
@@ -28,7 +39,20 @@
     "- ☑️ Connect to the `ds_ybu` database, *which you must do next*\n",
     "- ☑️ Complete the following sections\n",
     "  -  Table Partitioning\n",
-    "  -  Tablespaces and Row-Level Geo-Partitioning\n"
+    "  -  Tablespaces and Row-Level Geo-Partitioning\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Select your notebook kernel\n",
+    "- In the Notebook toolbar, click **Select Kernel**.\n",
+    "<br>\n",
+    "<img width=50% src=\"assets/01_01_Select_Kernel_Toolbar.png\" />\n",
+    "\n",
+    "- Next, in the dropdown, select **Python 3.12** or higher.\n",
+    "<br>\n",
+    "<img width=50% src=\"assets/01_02_Select_Kernel_Dropdown.png\" />\n",
+    "\n",
+    "That's it!"
    ]
   },
   {
@@ -39,7 +63,7 @@
     "editable": false
    },
    "source": [
-    "---\n",
+    "\n",
     "## 👣 Setup steps\n",
     "Here are the steps to setup this lab:\n",
     "- Import the notebook variables\n",
@@ -53,14 +77,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import the notebook variables \n",
+    "### 👇 Import the notebook variables\n",
     "\n",
-    "> ‼️ Important\n",
+    "> 👉 IMPORTANT! 👈\n",
     "> \n",
     "> Do **NOT** skip running the following cell. \n",
     "> \n",
     "\n",
-    "The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell."
+    "The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell. \n",
+    "\n",
+    "👇 👇 👇 "
    ]
   },
   {
@@ -69,29 +95,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use %store -r to read 01_Lab_Requirements_Setup variables\n",
-    "%store -r MY_DB_NAME\n",
+    "# Use %store -r to read 01_Lab_Setup variables\n",
+    "\n",
     "%store -r MY_YB_PATH\n",
     "%store -r MY_YB_PATH_DATA\n",
     "%store -r MY_GITPOD_WORKSPACE_URL\n",
+    "\n",
+    "%store -r MY_DB_NAME\n",
+    "%store -r MY_DB_PORT\n",
+    "\n",
     "%store -r MY_HOST_IPv4_01\n",
     "%store -r MY_HOST_IPv4_02\n",
     "%store -r MY_HOST_IPv4_03\n",
     "\n",
+    "%store -r MY_MASTER_WEB_PORT\n",
     "%store -r MY_TSERVER_WEBSERVER_PORT\n",
+    "%store -r MY_YUGABYTED_WEB_UI_PORT\n",
+    "\n",
     "%store -r MY_YB_MASTER_HOST_GITPOD_URL\n",
     "%store -r MY_YB_TSERVER_HOST_GITPOD_URL\n",
+    "%store -r MY_YUGABYTED_UI_HOST_GITPOD_URL\n",
     "\n",
     "%store -r MY_NOTEBOOK_DIR\n",
     "%store -r MY_NOTEBOOK_DATA_FOLDER\n",
     "%store -r MY_NOTEBOOK_UTILS_FOLDER\n",
     "\n",
+    "%store -r MY_DATA_DDL_FILE_0\n",
+    "%store -r MY_DATA_DML_FILE_0\n",
     "%store -r MY_DATA_DDL_FILE_1\n",
     "%store -r MY_DATA_DML_FILE_1\n",
     "%store -r MY_DATA_DDL_FILE_2\n",
     "%store -r MY_DATA_DML_FILE_2\n",
     "%store -r MY_DATA_DDL_FILE_3\n",
-    "%store -r MY_DATA_DML_FILE_3"
+    "%store -r MY_DATA_DML_FILE_3\n",
+    "\n",
+    "%store -r MY_JEOPARDY_DATA_FILE\n",
+    "%store -r MY_GIN_EXAMPLES\n",
+    "%store -r MY_GITHUB_DATA_FILE\n",
+    "\n",
+    "%store -r MY_UTIL_FUNCTIONS_FILE\n",
+    "%store -r MY_UTIL_YBTSERVER_METRICS_FILE"
    ]
   },
   {
