--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "> **YugabyteDB YSQL Development**\n",
     ">\n",
-    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/).\n",
+    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/courses/yugabytedb-ysql-development).\n",
     ">\n",
     "<br>\n",
     "This notebook file is:\n",
