--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "> **YugabyteDB YSQL Development**\n",
     ">\n",
-    "> Enroll for free  [Yugabyte University](https://university.yugabyte.com/).\n",
+    "> Enroll for free  [Yugabyte University](https://university.yugabyte.com/courses/yugabytedb-ysql-development).\n",
     ">\n",
     "\n",
     "<br>\n",
