--- a/05_Using_GIN_Indexes.ipynb
+++ b/05_Using_GIN_Indexes.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "> **YugabyteDB YSQL Development**\n",
     ">\n",
-    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/).\n",
+    "> Enroll for free at [Yugabyte University](https://university.yugabyte.com/courses/yugabytedb-ysql-development).\n",
     ">\n",
     "<br>\n",
     "This notebook file is:\n",
