--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -966,7 +966,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql /* alter table rename AND add PK */\n",
+    "%%sql /* drop and create table with PK = partition key and clustering key */\n",
     "\n",
     "drop table if exists tbl_pk_hash_ck_asc;\n",
     "\n",
@@ -1178,11 +1178,16 @@
     "\n",
     "cd $YB_PATH/bin/\n",
     "\n",
-    "TABLE_ID_PATH=${YB_PATH_DATA}/node-1/disk-1/yb-data/tserver/data/rocksdb/table-${TABLE_ID}/tablet-${TABLET_ID}\n",
+    "TABLE_ID_PATH=${YB_PATH_DATA}/node1/data/yb-data/tserver/data/rocksdb/table-${TABLE_ID}\n",
+    "TABLET_ID_PATH=${TABLE_ID_PATH}/tablet-${TABLET_ID}\n",
+    "echo ${TABLE_ID_PATH}\n",
+    "echo ${TABLET_ID_PATH}\n",
+    "ls  ${TABLE_ID_PATH}\n",
     "\n",
-    "#ls -l  ${TABLE_ID_PATH}\n",
-    "\n",
-    "./sst_dump --command=scan --file=${TABLE_ID_PATH} --output_format=decoded_regulardb "
+    "./sst_dump --command=scan --file=${TABLET_ID_PATH} --output_format=decoded_regulardb \n",
+    "#./sst_dump --command=scan --file=${TABLET_ID_PATH} --output_format=decoded_intentsdb\n",
+    "# ./sst_dump --command=scan --file=${TABLET_ID_PATH} --output_format=raw\n",
+    "# ./sst_dump --command=raw --file=${TABLET_ID_PATH}\n"
    ]
   },
   {
