--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -112,45 +112,7 @@
    "outputs": [],
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
-    "\n",
-    "%store -r MY_YB_PATH\n",
-    "%store -r MY_YB_PATH_DATA\n",
-    "%store -r MY_GITPOD_WORKSPACE_URL\n",
-    "\n",
-    "%store -r MY_DB_NAME\n",
-    "%store -r MY_DB_PORT\n",
-    "\n",
-    "%store -r MY_HOST_IPv4_01\n",
-    "%store -r MY_HOST_IPv4_02\n",
-    "%store -r MY_HOST_IPv4_03\n",
-    "\n",
-    "%store -r MY_MASTER_WEB_PORT\n",
-    "%store -r MY_TSERVER_WEBSERVER_PORT\n",
-    "%store -r MY_YUGABYTED_WEB_UI_PORT\n",
-    "\n",
-    "%store -r MY_YB_MASTER_HOST_GITPOD_URL\n",
-    "%store -r MY_YB_TSERVER_HOST_GITPOD_URL\n",
-    "%store -r MY_YUGABYTED_UI_HOST_GITPOD_URL\n",
-    "\n",
-    "%store -r MY_NOTEBOOK_DIR\n",
-    "%store -r MY_NOTEBOOK_DATA_FOLDER\n",
-    "%store -r MY_NOTEBOOK_UTILS_FOLDER\n",
-    "\n",
-    "%store -r MY_DATA_DDL_FILE_0\n",
-    "%store -r MY_DATA_DML_FILE_0\n",
-    "%store -r MY_DATA_DDL_FILE_1\n",
-    "%store -r MY_DATA_DML_FILE_1\n",
-    "%store -r MY_DATA_DDL_FILE_2\n",
-    "%store -r MY_DATA_DML_FILE_2\n",
-    "%store -r MY_DATA_DDL_FILE_3\n",
-    "%store -r MY_DATA_DML_FILE_3\n",
-    "\n",
-    "%store -r MY_JEOPARDY_DATA_FILE\n",
-    "%store -r MY_GIN_EXAMPLES\n",
-    "%store -r MY_GITHUB_DATA_FILE\n",
-    "\n",
-    "%store -r MY_UTIL_FUNCTIONS_FILE\n",
-    "%store -r MY_UTIL_YBTSERVER_METRICS_FILE"
+    "%store -r"
    ]
   },
   {
@@ -179,17 +141,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connect use Python 3.7.9+\n",
+    "# connect use Python 3.12.1+\n",
     "import psycopg2\n",
     "import sqlalchemy as alc\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "db_host=MY_HOST_IPv4_01\n",
-    "db_name=MY_DB_NAME\n",
+    "db_host = MY_HOST_IPv4_01\n",
+    "db_name = MY_DB_NAME\n",
     "\n",
-    "connection_str='postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
+    "connection_str = 'postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
     "\n",
-    "# engine = create_engine(connection_str)"
+    "engine = create_engine(connection_str)"
    ]
   },
   {
@@ -209,7 +171,7 @@
     "%reload_ext sql\n",
     "\n",
     "# SQL magic for python connection string\n",
-    "%sql {connection_str}"
+    "%sql engine"
    ]
   },
   {
