--- a/04_Anatomy_of_an_Index.ipynb
+++ b/04_Anatomy_of_an_Index.ipynb
@@ -108,50 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
-    "\n",
-    "%store -r MY_YB_PATH\n",
-    "%store -r MY_YB_PATH_DATA\n",
-    "%store -r MY_GITPOD_WORKSPACE_URL\n",
-    "\n",
-    "%store -r MY_DB_NAME\n",
-    "%store -r MY_DB_PORT\n",
-    "\n",
-    "%store -r MY_HOST_IPv4_01\n",
-    "%store -r MY_HOST_IPv4_02\n",
-    "%store -r MY_HOST_IPv4_03\n",
-    "\n",
-    "%store -r MY_MASTER_WEB_PORT\n",
-    "%store -r MY_TSERVER_WEBSERVER_PORT\n",
-    "%store -r MY_YUGABYTED_WEB_UI_PORT\n",
-    "\n",
-    "%store -r MY_YB_MASTER_HOST_GITPOD_URL\n",
-    "%store -r MY_YB_TSERVER_HOST_GITPOD_URL\n",
-    "%store -r MY_YUGABYTED_UI_HOST_GITPOD_URL\n",
-    "\n",
-    "%store -r MY_NOTEBOOK_DIR\n",
-    "%store -r MY_NOTEBOOK_DATA_FOLDER\n",
-    "%store -r MY_NOTEBOOK_UTILS_FOLDER\n",
-    "\n",
-    "%store -r MY_DATA_DDL_FILE_0\n",
-    "%store -r MY_DATA_DML_FILE_0\n",
-    "%store -r MY_DATA_DDL_FILE_1\n",
-    "%store -r MY_DATA_DML_FILE_1\n",
-    "%store -r MY_DATA_DDL_FILE_2\n",
-    "%store -r MY_DATA_DML_FILE_2\n",
-    "%store -r MY_DATA_DDL_FILE_3\n",
-    "%store -r MY_DATA_DML_FILE_3\n",
-    "\n",
-    "%store -r MY_JEOPARDY_DATA_FILE\n",
-    "%store -r MY_GIN_EXAMPLES\n",
-    "%store -r MY_GITHUB_DATA_FILE\n",
-    "\n",
-    "%store -r MY_UTIL_FUNCTIONS_FILE\n",
-    "%store -r MY_UTIL_YBTSERVER_METRICS_FILE"
+    "%store -r "
    ]
   },
   {
@@ -170,21 +132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connect use Python 3.7.9+\n",
+    "# connect use Python 3.12.1+\n",
     "import psycopg2\n",
     "import sqlalchemy as alc\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "db_host=MY_HOST_IPv4_01\n",
-    "db_name=MY_DB_NAME\n",
+    "db_host = MY_HOST_IPv4_01\n",
+    "db_name = MY_DB_NAME\n",
     "\n",
-    "connection_str='postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
+    "connection_str = 'postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
     "\n",
-    "# engine = create_engine(connection_str)"
+    "engine = create_engine(connection_str)"
    ]
   },
   {
@@ -197,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%reload_ext sql\n",
     "\n",
     "# SQL magic for python connection string\n",
-    "%sql {connection_str}"
+    "%sql engine"
    ]
   },
   {
@@ -230,23 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
-      "1 rows affected.\n",
-      "+----------------------------------+\n",
-      "|        fn_yb_create_stmts        |\n",
-      "+----------------------------------+\n",
-      "| 2023-05-24 10:55:23.343679-07:00 |\n",
-      "+----------------------------------+\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#%% python, but prepared statements as sql magic\n",
     "\n",
@@ -267,46 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
-      "1 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>count</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>3</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[(3,)]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql \n",
     "select count(*) from pg_prepared_statements where 1=1 and name in ('stmt_util_metrics_snap_tablet','stmt_util_metrics_snap_table','stmt_util_metrics_snap_reset')"
