--- a/00_Local_Only_Setup_MacOS.ipynb
+++ b/00_Local_Only_Setup_MacOS.ipynb
@@ -68,6 +68,138 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%markdown\n",
+    "<style>\n",
+    "    .rendered_html table {\n",
+    "        border-collapse: collapse;\n",
+    "        margin: auto;\n",
+    "    }\n",
+    "    .rendered_html th, .rendered_html td {\n",
+    "        border: 1px solid black;\n",
+    "        padding: 8px;\n",
+    "        text-align: left;\n",
+    "    }\n",
+    "    .rendered_html th {\n",
+    "        background-color: #f2f2f2;\n",
+    "    }\n",
+    "</style>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    .rendered_html table {\n",
+       "        border-collapse: collapse;\n",
+       "        margin: auto;\n",
+       "    }\n",
+       "    .rendered_html th, .rendered_html td {\n",
+       "        border: 1px solid black;\n",
+       "        padding: 8px;\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "    .rendered_html th {\n",
+       "        background-color: #f2f2f2;\n",
+       "    }\n",
+       "</style>\n",
+       "<table id=\"rendered_html\" >\n",
+       "    <tr>\n",
+       "      <th>Month</th>\n",
+       "      <th>Savings</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>January</td>\n",
+       "      <td>$100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>February</td>\n",
+       "      <td>$80</td>\n",
+       "    </tr>\n",
+       "  </table>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<style>\n",
+    "    .rendered_html table {\n",
+    "        border-collapse: collapse;\n",
+    "        margin: auto;\n",
+    "    }\n",
+    "    .rendered_html th, .rendered_html td {\n",
+    "        border: 1px solid black;\n",
+    "        padding: 8px;\n",
+    "        text-align: left;\n",
+    "    }\n",
+    "    .rendered_html th {\n",
+    "        background-color: #f2f2f2;\n",
+    "    }\n",
+    "</style>\n",
+    "<table id=\"rendered_html\" >\n",
+    "    <tr>\n",
+    "      <th>Month</th>\n",
+    "      <th>Savings</th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td>January</td>\n",
+    "      <td>$100</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td>February</td>\n",
+    "      <td>$80</td>\n",
+    "    </tr>\n",
+    "  </table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.core.display import HTML\n",
+    "\n",
+    "# Define your custom CSS\n",
+    "style = \"\"\"\n",
+    "<style>\n",
+    "    .rendered_html table {\n",
+    "        border-collapse: collapse;\n",
+    "        margin: auto;\n",
+    "    }\n",
+    "    .rendered_html th, .rendered_html td {\n",
+    "        border: 1px solid black;\n",
+    "        padding: 8px;\n",
+    "        text-align: left;\n",
+    "    }\n",
+    "    .rendered_html th {\n",
+    "        background-color: #f2f2f2;\n",
+    "    }\n",
+    "</style>\n",
+    "\"\"\"\n",
+    "\n",
+    "# Inject the CSS into the notebook\n",
+    "display(HTML(style))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -123,16 +255,16 @@
     "### BEGIN: Edit your MY_SUDO\n",
     "\n",
     "# Leave it blank forcing a strategy for notebook execution\n",
-    "MY_SUDO=''\n",
+    "#MY_SUDO=''\n",
     "\n",
     "# Specify your sudo password in the cell\n",
     "#MY_SUDO='psswrd'\n",
     "\n",
     "# env_vars defines ENV_SUDO='psswrd'\n",
-    "# MY_SUDO=os.environ.get('MY_SUDO')\n",
+    "#MY_SUDO=os.environ.get('MY_SUDO')\n",
     "\n",
     "# bash_profile exports the variable, e.g., export GLOBAL_SUDO='psswrd' \n",
-    "#MY_SUDO=os.environ.get('GLOBAL_SUDO')\n",
+    "MY_SUDO=os.environ.get('GLOBAL_SUDO')\n",
     "\n",
     "### END: MY_SUDO\n",
     "\n",
@@ -140,7 +272,10 @@
     "# Create and assign notebook variables\n",
     "# env_vars defines the following\n",
     "MY_DB_NAME=os.environ.get('MY_DB_NAME')\n",
+    "\n",
     "MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
+    "MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_LOCAL')\n",
+    "\n",
     "MY_HOST_IPv4_01=os.environ.get('MY_HOST_IPv4_01')\n",
     "MY_HOST_IPv4_02=os.environ.get('MY_HOST_IPv4_02')\n",
     "MY_HOST_IPv4_03=os.environ.get('MY_HOST_IPv4_03')\n",
@@ -154,6 +289,7 @@
     "%store MY_SUDO\n",
     "%store MY_DB_NAME\n",
     "%store MY_YB_PATH\n",
+    "%store MY_YB_PATH_DATA\n",
     "%store MY_HOST_IPv4_01\n",
     "%store MY_HOST_IPv4_02\n",
     "%store MY_HOST_IPv4_03\n",
@@ -232,64 +368,94 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_TSERVER_WEBSERVER_PORT\"  # yb-ctl create\n",
+    "%%bash\n",
+    "process_ids=$(pgrep -f 'yuga')\n",
+    "\n",
+    "# Check if any processes were found\n",
+    "if [ -z \"$process_ids\" ]; then\n",
+    "    echo \"No processes found containing 'yuga' in the file path.\"\n",
+    "    exit 0\n",
+    "fi\n",
+    "\n",
+    "# Kill the processes\n",
+    "for pid in $process_ids; do\n",
+    "    kill $pid\n",
+    "    echo \"Killed process $pid\"\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "### Grep port 9000 for conflict\n",
+    " lsof -nP -iTCP -sTCP:LISTEN | grep 8890\n",
+    "## this should be juypter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%%bash -s \"$MY_YB_PATH\"  \"$MY_YB_PATH_DATA\"  \"$MY_TSERVER_WEBSERVER_PORT\"  # yb-ctl create\n",
     "YB_PATH=${1}\n",
-    "TSERVER_WEBSERVER_PORT=${2}\n",
+    "YB_PATH_DATA=${2}\n",
+    "TSERVER_WEBSERVER_PORT=${3}\n",
     "\n",
     "cd $YB_PATH\n",
     "\n",
-    "### Grep port 9000 for conflict\n",
-    "# lsof -nP -iTCP -sTCP:LISTEN | grep 9000\n",
     "\n",
-    "# Stop running cluster\n",
-    "if  pgrep -x \"yb-tserver\" > /dev/null \n",
-    "then\n",
-    "    ./bin/yb-ctl stop\n",
-    "    sleep 1\n",
-    "fi\n",
+    "## this should be juypter\n",
     "\n",
-    "# Destroy cluster\n",
-    "if echo `./bin/yb-ctl status` | grep \"Node Count\"  > /dev/null \n",
-    "then\n",
-    "    ./bin/yb-ctl destroy\n",
-    "    sleep 1\n",
-    "fi\n",
-    "#--tserver_flags=\"TEST_docdb_log_write_batches=true,tserver_enable_metrics_snapshotter=false\"\n",
+    "\n",
     "./bin/yugabyted start  \\\n",
     "        --advertise_address=\"127.0.0.1\"  \\\n",
-    "        --base_dir=/home/gitpod/var/node1  \\\n",
+    "        --base_dir=${YB_PATH_DATA}/node-1  \\\n",
     "        --cloud_location=cloud1.region1.zone1  \\\n",
     "        --fault_tolerance=zone  \\\n",
     "        --master_flags=\"yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,ysql_enable_packed_row=false\"  \\\n",
     "        --master_webserver_port=7000  \\\n",
     "        --tserver_flags=\"yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,ysql_enable_packed_row=false\"  \\\n",
-    "        --tserver_webserver_port=8200\n",
+    "        --tserver_webserver_port=8200 > dev\\null\n",
     "        \n",
-    "./bin/yugabyted start  \\\n",
-    "        --advertise_address=\"127.0.0.2\"  \\\n",
-    "        --base_dir=/home/gitpod/var/node2  \\\n",
-    "        --cloud_location=cloud1.region1.zone2  \\\n",
-    "        --fault_tolerance=zone  \\\n",
-    "        --join=\"127.0.0.1\"  \\\n",
-    "        --master_flags=\"yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,ysql_enable_packed_row=false\"  \\\n",
-    "        --master_webserver_port=7000  \\\n",
-    "        --tserver_flags=\"yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,ysql_enable_packed_row=false\"  \\\n",
-    "        --tserver_webserver_port=8200\n",
+    "# ./bin/yugabyted start  \\\n",
+    "#         --advertise_address=\"127.0.0.2\"  \\\n",
+    "#         --base_dir=${YB_PATH_DATA}/node-2 \\\n",
+    "#         --cloud_location=cloud1.region1.zone2  \\\n",
+    "#         --fault_tolerance=zone  \\\n",
+    "#         --join=\"127.0.0.1\"  \\\n",
+    "#         --master_flags=\"yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,ysql_enable_packed_row=false\"  \\\n",
+    "#         --master_webserver_port=7000  \\\n",
+    "#         --tserver_flags=\"yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,ysql_enable_packed_row=false\"  \\\n",
+    "#         --tserver_webserver_port=8200\n",
     "\n",
-    "   ./bin/yugabyted start  \\\n",
-    "        --advertise_address=\"127.0.0.3\"  \\\n",
-    "        --base_dir=/home/gitpod/var/node3  \\\n",
-    "        --cloud_location=cloud1.region1.zone3  \\\n",
-    "        --fault_tolerance=zone  \\\n",
-    "        --join=\"127.0.0.1\"  \\\n",
-    "        --master_flags=\"yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,ysql_enable_packed_row=false\"  \\\n",
-    "        --master_webserver_port=7000  \\\n",
-    "        --tserver_flags=\"yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,ysql_enable_packed_row=false\"  \\\n",
-    "        --tserver_webserver_port=8200\n",
+    "#    ./bin/yugabyted start  \\\n",
+    "#         --advertise_address=\"127.0.0.3\"  \\\n",
+    "#         --base_dir=${YB_PATH_DATA}/node-3  \\\n",
+    "#         --cloud_location=cloud1.region1.zone3  \\\n",
+    "#         --fault_tolerance=zone  \\\n",
+    "#         --join=\"127.0.0.1\"  \\\n",
+    "#         --master_flags=\"yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,ysql_enable_packed_row=false\"  \\\n",
+    "#         --master_webserver_port=7000  \\\n",
+    "#         --tserver_flags=\"yb_num_shards_per_tserver=1,ysql_num_shards_per_tserver=1,ysql_beta_features=true,ysql_enable_packed_row=false\"  \\\n",
+    "#         --tserver_webserver_port=8200\n",
     "\n",
-    "./bin/yugabyted configure data_placement --fault_tolerance=zone\n",
+    "# ./bin/yugabyted configure data_placement --fault_tolerance=zone\n",
     "\n",
-    "./bin/yugabyted status"
+    "# ./bin/yugabyted status"
    ]
   },
   {
@@ -488,7 +654,7 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_UTILS_FOLDER\" \"$MY_UTIL_FUNCTIONS_FILE\"  # util functions\n",
-    "MY_TSERVER_LOGS=/Users/seth/yugabyte-data/node-1/disk-1/yb-data/tserver/logs  \n",
+    "MY_TSERVER_LOGS=/Users/seth/yugabyte-data/node-1/yb-data/tserver/logs  \n",
     "ls $MY_TSERVER_LOGS\n",
     "\n",
     "tail -f $MY_TSERVER_LOGS/yb-tserver.INFO | grep -E '^ | tablet.cc:'\n"
@@ -559,6 +725,65 @@
    "source": [
     "%%sql \n",
     "insert into demo values (300,'hey now3');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>QUERY PLAN</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Index Scan using idx_unq_demo on demo  (cost=0.00..4.12 rows=1 width=8) (actual time=0.881..0.883 rows=1 loops=1)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>&nbsp;&nbsp;Index Cond: (value = &#x27;hey now3&#x27;::text)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Planning Time: 3.660 ms</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Execution Time: 0.914 ms</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Peak Memory Usage: 8 kB</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Index Scan using idx_unq_demo on demo  (cost=0.00..4.12 rows=1 width=8) (actual time=0.881..0.883 rows=1 loops=1)',),\n",
+       " (\"  Index Cond: (value = 'hey now3'::text)\",),\n",
+       " ('Planning Time: 3.660 ms',),\n",
+       " ('Execution Time: 0.914 ms',),\n",
+       " ('Peak Memory Usage: 8 kB',)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "explain analyze select id from demo where value = 'hey now3';"
    ]
   },
   {
