--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -63,7 +63,7 @@
     "- In your Chromium browser, select the Pop-ups Blocked icon in the browser address bar.\n",
     "- In the dialog, select **Always allow**. This lets you view the YugabyteD web user interface on port `15433`.\n",
     "  <br>\n",
-    "  <img width=50% src=\"assets/01_03_Popups_Blocked.png\" />\n",
+    "  <img width=25% src=\"assets/01_03_Popups_Blocked.png\" />\n",
     "\n",
     "<br>\n",
     "That's it!"
@@ -518,9 +518,7 @@
     "editable": false
    },
    "source": [
-    "## Connect to YugabyteDB using the PostgreSQL Driver for Python\n",
-    "The following cells requires:\n",
-    "- Python 3.8+ and psycopg2"
+    "## Connect to YugabyteDB using the PostgreSQL Driver for Python"
    ]
   },
   {
@@ -532,18 +530,16 @@
    },
    "outputs": [],
    "source": [
-    "# Connect to db_ybu\n",
-    "# Inspiration from https://medium.com/analytics-vidhya/postgresql-integration-with-jupyter-notebook-deb97579a38d\n",
+    "# connect use Python 3.12.1+\n",
     "import psycopg2\n",
     "import sqlalchemy as alc\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "# env_var.env\n",
-    "db_host=MY_HOST_IPv4_01\n",
-    "db_name=MY_DB_NAME\n",
+    "db_host = MY_HOST_IPv4_01\n",
+    "db_name = MY_DB_NAME\n",
     "\n",
-    "connection_str='postgresql://yugabyte@'+db_host+':5433/'+db_name\n",
-    "print(connection_str)\n",
+    "connection_str = 'postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
+    "\n",
     "engine = create_engine(connection_str)"
    ]
   },
@@ -569,7 +565,7 @@
    "source": [
     "%reload_ext sql \n",
     "# creates connection for sql magic\n",
-    "%sql {connection_str}"
+    "%sql engine"
    ]
   },
   {
