--- a/05_Using_GIN_Indexes.ipynb
+++ b/05_Using_GIN_Indexes.ipynb
@@ -152,7 +152,15 @@
    "outputs": [],
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
-    "%store -r "
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"./styles/custom.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()\n",
+    "\n",
+    "%store -r \n",
+    "\n",
+    "%config SqlMagic.named_parameters=True"
    ]
   },
   {
