--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -178,7 +178,11 @@
    "source": [
     "# Env variables for Notebook\n",
     "import os\n",
-    "\n",
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"./styles/custom.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()\n",
     "\n",
     "# read env_vars.env\n",
     "env_vars = !cat env_vars.env\n",
@@ -190,15 +194,15 @@
     "#\n",
     "### Uncomment Gitpod specific\n",
     "#\n",
-    "MY_YB_PATH=os.environ.get('MY_YB_PATH_GITPOD')\n",
-    "MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_GITPOD')\n",
-    "MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
+    "# MY_YB_PATH=os.environ.get('MY_YB_PATH_GITPOD')\n",
+    "# MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_GITPOD')\n",
+    "# MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
     "\n",
     "### Comment out Local \n",
     "#\n",
-    "# MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
-    "# MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_LOCAL')\n",
-    "# MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
+    "MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
+    "MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_LOCAL')\n",
+    "MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
     "##\n",
     "### End: Gitpod or local\n",
     "\n",
@@ -559,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
